-
Bug
-
Resolution: Fixed
-
Minor
-
Upstream
-
None
-
3
-
9223372036854775807
Lustre: DEBUG MARKER: == sanity-benchmark test fsx: fsx ==================================================================== 22:56:45 (1619287005) LustreError: 8995:0:(osd_io.c:1563:osd_write_commit()) ASSERTION( !PageDirty(lnb[i].lnb_page) ) failed: LustreError: 8995:0:(osd_io.c:1563:osd_write_commit()) LBUG Pid: 8995, comm: ll_ost_io00_009 4.18.0 #36 SMP Thu Mar 25 14:56:29 MSK 2021 Call Trace: [<0>] libcfs_call_trace+0x76/0xa0 [libcfs] [<0>] lbug_with_loc+0x3e/0x80 [libcfs] [<0>] osd_write_commit+0x33a/0x9a0 [osd_ldiskfs] [<0>] ofd_commitrw+0xbb2/0x2d90 [ofd] [<0>] tgt_brw_write+0xeb7/0x22f0 [ptlrpc] [<0>] tgt_request_handle+0xbe0/0x1970 [ptlrpc] [<0>] ptlrpc_main+0x134f/0x30e0 [ptlrpc]
bisected to:
cb037f305c 2020-12-14 | LU-14160 fallocate: Add punch mode to fallocate [Arshad Hussain]
- is related to
-
LU-14402 LBUG: osd_write_commit() ASSERTION( !PageDirty(lnb[i].lnb_page) ) failed
-
- Resolved
-